--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       font-family: 'Noto Sans JP', 'Roboto', sans-serif;
       background: var(--bg-gradient);
       color: var(--text-color);
-      max-width: 900px;
       margin: 50px auto;
       padding: 20px;
       line-height: 1.8;
+      max-width: 1200px; /* 最大幅を1200pxに設定 */
     }
     h1 {
       text-align: center;
@@ -34,36 +34,52 @@
       background: var(--card-bg);
       border-radius: var(--border-radius);
       box-shadow: var(--box-shadow);
-      padding: 24px;
-      margin-bottom: 24px;
+      padding: 15px;
+      margin-bottom: 20px;
       transition: transform 0.3s, box-shadow 0.3s;
       border: 1px solid #e0e0e0;
+      width: 100%;
+      max-width: 900px; /* カードの最大幅を設定 */
+      margin-left: auto;
+      margin-right: auto;
+      height: 160px; /* 高さを縮小 */
+      overflow: hidden;
     }
     .card:hover {
       transform: translateY(-6px);
       box-shadow: 0 12px 24px rgba(0,0,0,0.15);
     }
     .card h2 {
-      font-size: 1.6em;
+      font-size: 1.4em;
       margin-bottom: 8px;
       color: var(--main-color);
+      line-height: 1.2;
     }
     .card .date {
       color: #777;
       font-size: 0.85em;
-      margin-bottom: 16px;
+      margin-bottom: 8px;
     }
-    .actions a {
+    .card p {
+      font-size: 1em;
+      color: #333;
+      margin-bottom: 8px;
+      line-height: 1.4;
+      max-height: 40px; /* 本文の表示高さを調整 */
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .card .actions a {
       display: inline-block;
       background: var(--main-color);
       color: white;
       text-decoration: none;
-      padding: 10px 18px;
+      padding: 8px 16px;
       border-radius: 30px;
       font-size: 0.9em;
       transition: background 0.3s;
     }
-    .actions a:hover {
+    .card .actions a:hover {
       background: var(--accent-color);
     }
     nav {
@@ -196,8 +212,9 @@
           card.innerHTML = `
             <h2>${article.title}</h2>
             <div class="date">公開日: ${formatDate(article.publishedAt || article.datePublished || article.date)}</div>
+            <p>${article.content ? article.content.substring(0, 20) + '...' : '内容がありません'}</p>
             <div class="actions">
-              <a href="article.html?id=${article.id}">読む</a>
+              <a href="article.html?id=${article.id}">続きを読む</a>
             </div>
           `;
           articleContainer.appendChild(card);
@@ -215,8 +232,9 @@
         card.innerHTML = `
           <h2>${article.title}</h2>
           <div class="date">公開日: ${formatDate(article.publishedAt || article.datePublished || article.date)}</div>
+          <p>${article.content ? article.content.substring(0, 20) + '...' : '内容がありません'}</p>
           <div class="actions">
-            <a href="article.html?id=${id}">読む</a>
+            <a href="article.html?id=${id}">続きを読む</a>
           </div>
         `;
         articlesList.appendChild(card);
