--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
       background: var(--card-bg);
       border-radius: var(--border-radius);
       box-shadow: var(--box-shadow);
-      padding: 15px 15px 60px; /* 下に余白追加 */
+      padding: 15px 15px 60px;
       margin: 20px auto;
       transition: transform 0.3s, box-shadow 0.3s;
       border: 1px solid #e0e0e0;
       width: 100%;
       max-width: 900px;
-      height: 160px;
+      min-height: 160px;
       overflow: hidden;
       box-sizing: border-box;
-      position: relative; /* 追加！ */
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card:hover {
       transform: translateY(-6px);
@@ -67,16 +70,21 @@
       margin-bottom: 8px;
     }
     .card p {
-      font-size: 1em;
-      color: #333;
-      margin-bottom: 8px;
-      line-height: 1.4;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      max-height: 40px;
-    }
+  font-size: 1em;
+  color: #333;
+  margin-bottom: 8px;
+  line-height: 1.4;
+  overflow: hidden;
+  display: -webkit-box;
+  display: box; /* ←標準仕様用に追加 */
+  -webkit-line-clamp: 2;
+  line-clamp: 2; /* ←標準仕様用に追加 */
+  -webkit-box-orient: vertical;
+  box-orient: vertical; /* ←標準仕様用に追加 */
+}
+
     .card .actions {
-      position: absolute; /* 追加！ */
+      position: absolute;
       bottom: 16px;
       right: 16px;
     }
@@ -96,17 +104,21 @@
     nav {
       text-align: center;
       margin-top: 40px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
     }
     nav a {
       background: var(--main-color);
       color: white;
       text-decoration: none;
       padding: 12px 24px;
-      margin: 0 10px;
       border-radius: 30px;
       font-weight: bold;
       transition: background 0.3s;
       display: inline-block;
+      white-space: nowrap;
     }
     nav a:hover {
       background: var(--accent-color);
@@ -231,7 +243,7 @@
           card.innerHTML = `
             <h2>${escapeHTML(article.title || "無題")}</h2>
             <div class="date">公開日: ${formatDate(article.publishedAt || article.datePublished || article.date)}</div>
-            <p>${escapeHTML(article.content ? article.content.slice(0, 40) + "..." : "内容がありません")}</p>
+            <p>${escapeHTML(article.content ? article.content.slice(0, 100) : "内容がありません")}</p>
             <div class="actions">
               <a href="article.html?id=${encodeURIComponent(article.id)}">続きを読む</a>
             </div>
@@ -251,7 +263,7 @@
         card.innerHTML = `
           <h2>${escapeHTML(article.title || "無題")}</h2>
           <div class="date">公開日: ${formatDate(article.publishedAt || article.datePublished || article.date)}</div>
-          <p>${escapeHTML(article.content ? article.content.slice(0, 40) + "...": "内容がありません")}</p>
+          <p>${escapeHTML(article.content ? article.content.slice(0, 100) : "内容がありません")}</p>
           <div class="actions">
             <a href="article.html?id=${encodeURIComponent(id)}">続きを読む</a>
           </div>
