--- a/index.html
+++ b/index.html
@@ -37,27 +37,26 @@
       background: var(--card-bg);
       border-radius: var(--border-radius);
       box-shadow: var(--box-shadow);
-      padding: 15px 15px 60px;
-      margin: 20px auto;
+      padding: 15px;
+      margin: 15px auto;
       transition: transform 0.3s, box-shadow 0.3s;
       border: 1px solid #e0e0e0;
       width: 100%;
       max-width: 900px;
-      min-height: 160px;
+      min-height: auto;
       overflow: hidden;
       box-sizing: border-box;
       position: relative;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
     }
     .card:hover {
       transform: translateY(-6px);
       box-shadow: 0 12px 24px rgba(0,0,0,0.15);
     }
     .card h2 {
-      font-size: 1.4em;
-      margin-bottom: 8px;
+      font-size: 1.2em;
+      margin-bottom: 6px;
       color: var(--main-color);
       line-height: 1.3;
       overflow: hidden;
@@ -66,27 +65,25 @@
     }
     .card .date {
       color: #777;
-      font-size: 0.85em;
-      margin-bottom: 8px;
+      font-size: 0.8em;
+      margin-bottom: 6px;
     }
     .card p {
-  font-size: 1em;
-  color: #333;
-  margin-bottom: 8px;
-  line-height: 1.4;
-  overflow: hidden;
-  display: -webkit-box;
-  display: box; /* ←標準仕様用に追加 */
-  -webkit-line-clamp: 2;
-  line-clamp: 2; /* ←標準仕様用に追加 */
-  -webkit-box-orient: vertical;
-  box-orient: vertical; /* ←標準仕様用に追加 */
-}
-
+      font-size: 0.9em;
+      color: #333;
+      margin-bottom: 8px;
+      line-height: 1.2;
+      overflow: hidden;
+      display: -webkit-box;
+      display: box; /* 標準仕様用に追加 */
+      -webkit-line-clamp: 1; /* 本文1行だけ表示 */
+      line-clamp: 1;
+      -webkit-box-orient: vertical;
+      box-orient: vertical;
+    }
     .card .actions {
-      position: absolute;
-      bottom: 16px;
-      right: 16px;
+      margin-top: auto;
+      text-align: right;
     }
     .card .actions a {
       display: inline-block;
