--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       border: 1px solid #e0e0e0;
       width: 100%;
       max-width: 900px;
-      min-height: 100px; /* ←最小高さも小さくした */
+      min-height: 100px;
       overflow: hidden;
       box-sizing: border-box;
       position: relative;
@@ -58,23 +58,28 @@
     .card-header {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       margin-bottom: 8px;
+      gap: 10px;
     }
     .card-header h2 {
-      font-size: 1.4em;
+      font-size: 1.2em;
       margin: 0;
       color: var(--main-color);
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space: nowrap;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      line-height: 1.4;
     }
     .card-header .date {
-      font-size: 0.8em;
+      font-size: 0.75em;
       color: #777;
-      margin-left: 10px;
-      white-space: nowrap;
+      margin-top: 2px;
       flex-shrink: 0;
+      text-align: right;
+      white-space: nowrap;
     }
     .card p {
       font-size: 1em;
@@ -83,11 +88,8 @@
       line-height: 1.4;
       overflow: hidden;
       display: -webkit-box;
-      display: box; /* 標準仕様 */
-      -webkit-line-clamp: 1; /* 1行にする */
-      line-clamp: 1;
+      -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
-      box-orient: vertical;
     }
     .card .actions {
       position: absolute;
@@ -155,6 +157,22 @@
       color: var(--main-color);
       cursor: pointer;
       user-select: none;
+    }
+    /* スマホ対応 */
+    @media (max-width: 600px) {
+      .card {
+        padding: 15px 15px 40px;
+      }
+      .card p {
+        display: none;
+      }
+      .card-header h2 {
+        font-size: 1em;
+        -webkit-line-clamp: 2;
+      }
+      .card-header .date {
+        font-size: 0.7em;
+      }
     }
   </style>
 </head>
